@@ -99,6 +99,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #23735: Handle terminal resizing with Readline 6.3+ by installing our
+  own SIGWINCH handler.  Patch by Eric Price.
+
 - Issue #26586: In http.server, respond with "413 Request header fields too
   large" if there are too many header fields to parse, rather than killing
   the connection and raising an unhandled exception.  Patch by Xiang Zhang.
